--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/signup-login",
+            "outputPath": "docs",
+            "baseHref": "/SignupLogin/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
